# Space_Weather_Dashboard

./: .coverage  .coveragerc  .flake8  .gitignore  DEPLOY.md  README.md  pyproject.toml  requirements-etl.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy_app.yml  deploy_lambda.yml  etl.yml  refresh_db.yml  run_etl_dev.yml
.streamlit/: config.toml
app/: app_utils.py  cli.py  run_app.py  utils.py
app/pages/: geomag_indices.py  home.py  solar_wind.py  sun.py
config/: db_config.py
data/raw/: dst.csv  dst.json  kp.csv  kp.json  mag.csv  mag.json  plasma.csv  plasma.json  ssn.json
data/raw/dst/: dicts.json
data/raw/kp/: dicts.json
data/raw/mag/: lists.json
data/raw/plasma/: lists.json
data/raw/smoothed_ssn/: dicts.json
data/raw/ssn/: dicts.json
data/raw_backup/: dst.json
data/transformed/: noaa_data.db
docker/: Dockerfile  etl.py
docker/app/: Dockerfile  requirements.txt
docker/etl/: Dockerfile  etl.py  requirements.txt
docs/: Checklist.md  DECISIONS.md  DEPLOY.md  Project_Requirements.md
model/: model.keras  model.onnx
notebooks/: exploration.ipynb  test.ipynb
notebooks/exploration/: exploration.ipynb
notebooks/model/: model.ipynb  preprocess.ipynb  tune.ipynb
scripts/: fixture_data.py  run_etl.py  run_extract.py  run_transform.py
src/extract/: extract.py  extract_data_from_json.py  fetch_json.py  fetch_saved.py
src/load/: load.py  load_data_into_db.py  load_raw_indices.py  load_raw_json.py  load_raw_json_dicts.py  load_raw_json_lists.py  load_raw_rtsw.py  load_raw_solar.py
src/transform/: aggregate_solar_wind.py  fetch_saved_data.py  model_inference.py  prepare_model_input.py  prepare_model_inputs.py  process_combined_sw.py  process_dst.py  process_kp.py  process_old_solar_wind.py  process_rtsw.py  process_smoothed_ssn.py  process_solar_wind.py  process_ssn.py  transform.py
src/utils/: fetch_saved_data.py  logging_utils.py  parser.py  r2.py  s3.py  storage.py  validator.py
terraform/: Instructions.md  main.tf  outputs.tf  user_data.sh  user_data.yaml  variables.tf
tests/: run_tests.py
tests/component_tests/transform/: test_model_inference.py  test_prepare_model_inputs.py  test_process_dst.py  test_process_kp.py  test_process_old_solar_wind.py  test_process_rtsw.py  test_process_smoothed_snn.py  test_process_ssn.py
tests/integration_tests/: test_tranfsorm.py
tests/unit_tests/: test_clean_and_formatting.py  test_logging_utils.py  test_process_kp.py  test_process_solar_wind.py
(+5 files in other folders)
