[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Space_Weather_Dashboard"
version = "0.1.0"
description = "An ETL project for performing ETL on real time space weather data to display using a streamlit dashboard."
authors = [{name = "Umair", email = "umohammed235@outlook.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/Umair539/Capstone"

[project.scripts]
run_etl = "scripts.run_etl:run_etl_pipeline"
run_tests = "tests.run_tests:main"
run_app = "app.cli:launch_app"
run_extract = "scripts.run_extract:run_extract"
run_transform = "scripts.run_transform:run_transform"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
