[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Space_Weather_Dashboard"
version = "0.1.0"
requires-python = "==3.11.*"
dynamic = ["dependencies"]

[project.scripts]
run_etl = "scripts.run_etl:run_etl_pipeline"
run_tests = "tests.run_tests:main"
run_app = "app.cli:launch_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}